MC 1.18 and commons code update